# akkuea

./: CONTRIBUTING.md  README.md  branch-descr.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  stellar_wave_application.md
.github/workflows/: api-ci.yml  monorepo-ci.yml  vercel-preview.yml  webapp-ci.yml
apps/akkuea-land/: package.json  tsconfig.json
apps/akkuea-land/src/app/: globals.css  layout.tsx  page.tsx
apps/akkuea-land/src/components/: CityMap.tsx  GameShell.tsx
apps/akkuea-land/src/lib/: colorHash.ts  (+4 more)
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: app.ts  index.ts
apps/contracts/contracts/game-property-nft/: Cargo.toml
apps/contracts/contracts/game-property-nft/src/: components.rs  events.rs  lib.rs  test.rs
apps/shared/: eslint.config.mjs  package.json  tsconfig.json
apps/shared/src/: contracts.mainnet.json  contracts.testnet.json  index.ts
apps/webapp/: .env.example  .env.local.example  README.md  package.json  vercel.json
docs/: README.md
docs/api/: authentication.md  kyc-workflow.md  launch-workflows.md  minting-workflow.md
docs/contracts/: deployment.md
docs/deployment/: deploy-contracts.md  environment-variables.md  post-deploy-checklist.md
docs/game/: DEVELOPER_SETUP.md  ECONOMY.md  GAME_RULES.md
docs/guides/: getting-started.md  property-3d-capture.md
docs/operations/: runbook-dividends-placeholder.md  runbook-emergency-pause.md  runbook-oracle-failure.md  runbook-role-management.md
docs/testing/: smoke-tests.md
(+150 files in other folders)
